--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/agregarCampoMARC.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/agregarCampoMARC.tmpl
@@ -32,7 +32,7 @@
         <input id="liblibrarian" type="text" value="" size="90">
     </li> 
     <li class="sub_item">
-        <label for="tipoInput">[% 'Tipo de input' | i18n %]:</label>
+        <label for="tipoInput">[% 'Tipo de entrada' | i18n %]:</label>
         [% comboComponentes %]
     </li>
     <li class="sub_item">
