--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/modificarCampoMARC.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/modificarCampoMARC.tmpl
@@ -41,7 +41,7 @@
         <input id="liblibrarian" type="text" value="[% catalogacion.getLiblibrarian %]" size="85"> 
    </li>
     <li class="sub_item">
-        <label for="tipoInput">[% 'Tipo de input' | i18n %]:</label>
+        <label for="tipoInput">[% 'Tipo de entrada' | i18n %]:</label>
         [% comboComponentes %]
     </li>
     <li class="sub_item">
