--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
@@ -4721,6 +4721,9 @@ font-size:10pt;
 	background: #99CC66;
 }
 
+.fancybox_twitter{
+  width: 350px;
+}
 /* Estilo mensaje de contacto (mainpage) */
 
 /*.msj_main{
