varios arreglos CSS

--- a/intranet/htdocs/intranet-tmpl/novedades_intra_result.tmpl
+++ b/intranet/htdocs/intranet-tmpl/novedades_intra_result.tmpl
@@ -18,7 +18,9 @@
                                     
                           </p>
                       </div>
-                      <hr style="color:red;">
+                      [% IF loop.count != loop.size %]
+                        <hr class="divisor_novedades">
+                      [% END %]
               [% END %]
           </li>
       </ul>
