--- a/intranet/htdocs/intranet-tmpl/estantes/subEstante.tmpl
+++ b/intranet/htdocs/intranet-tmpl/estantes/subEstante.tmpl
@@ -92,7 +92,7 @@
                             [% contenido_estante.nivel2.nivel1.getAutor %]
                     </td>
                     <td align=center>
-                     [% contenido_estante.nivel2.getCiudadPublicacion %]
+                     [% contenido_estante.nivel2.getCiudadObject.getNombre %]
                     </td>
                     <td align=center>
                       [% IF contenido_estante.nivel2.getEdicion %]
