--- a/opac/htdocs/opac-tmpl/opac-DetallePrestamos.tmpl
+++ b/opac/htdocs/opac-tmpl/opac-DetallePrestamos.tmpl
@@ -1,123 +1,74 @@
 
+[% USE HTML %]
+[% IF cantidad_prestamos %]
 
-<script language=javascript>
+    <div class="resultados_consulta">[% "Cantidad de pr&eacute;stamos vigentes:" | i18n %]&nbsp;[% cantidad_prestamos %]</div>
 
-	function detalleMaterialEnEspera(id1){
-		$('#datosUsuario').slideUp('slow');
-		detalle(id1);
-	}
+    <div class="contenedor_paginador">[% paginador %]</div>
 
-</script>
 
-[% IF vencidos %]
 
-    <div class="resultados_consulta">[% "Usted tiene "| i18n %][% vencidos %][% " ejemplares vencidos" | i18n %]</div>
+    <table id="tablaHistorial" class="tablaHistorial tabla_datos" cellspacing="0" cellpadding="4" style="width:98%; text-align:center; border: 1;">
+        <tr class="tablaResultadoTitulo" >
+            <th>[% "T&iacute;tulo" | i18n %]</th>
+            <th>[% "Autor" | i18n %]</th>
+            <th>[% "Edici&oacute;n" | i18n %]</th>
+            <th>[% "Fecha de Pr&eacute;stamo" | i18n %]</th>
+            <th>[% "Fecha de Vencimiento" | i18n %]</th>
+            <th>&nbsp;</th>
+        </tr>
+        <!-- ESTE LOOP MUESTRA LOS PRESTAMOS -->
+        [% FOREACH prestamo IN prestamos %]
+            <tr>
+              <td> 
+                  [% IF prestamo.nivel3.nivel2.id1 %]
+                      [% PERL %]
+                              print C4::AR::Filtros::link_to( text =>     "[% prestamo.nivel3.nivel2.nivel1.getTitulo %]",
+                                                              url =>      "[% url_prefix %]/opac-detail.pl", 
+                                                              params => [ "id1=[% prestamo.nivel3.nivel2.id1 %]", ],
+                                                          ) ;
+                      [% END %]
+                  [% ELSE %]
+                      &nbsp;
+                  [% END %]
+                  </td>
+                  <td class="autor_result click" onClick="filtrarPorAutor([% prestamos.nivel3.nivel2.nivel1.cat_autor.id %])" title="[% 'Filtrar por Autor' | i18n %]">
+                      [% IF prestamo.nivel3.nivel1.getAutor %]
+                          [% prestamo.nivel3.nivel1.getAutor %]
+                      [% ELSE %]
+                          &nbsp;
+                      [% END %]
+                  </td>
+                  <td>
+                    [% IF prestamo.nivel3.nivel2.getEdicion %] [% prestamo.nivel3.nivel2.getEdicion %] [% ELSE %] - [% END %]                  </td>
+                  <td align=center>
+                      [% prestamo.getFecha_prestamo_formateada %]
+                  </td>
+                  <td align=center>
+                      [% prestamo.getFecha_vencimiento_formateada %]
+                  </td>
 
-[% END %]
-
-[% IF prestamos_cant %]
-
-<table class="tabla_datos" width="100%" border="1" class="tope" cellspacing="0" cellpadding="4" align="center">
-  <tr class="tablaResultadoTitulo">
-	<td colspan=7 align="center" borde=1>[% "Pr&eacute;stamos" | i18n %]</td>
-  </tr>
-
-  <tr class="tablaResultadoTitulo">
-	<th>[% "T&iacute;tulo" | i18n %]</th>
-	<th>[% "Autor" | i18n %]</th>
-	<th>[% "C&oacute;digo de Barras" | i18n %]</th>
-	<th>[% "Signatura Topogr&aacute;fica" | i18n %]</th>
-	<th>[% "Volumen" | i18n %]</th>
-	<th>[% "Fecha de Pr&eacute;stamo" | i18n %]</th>
-	<th>[% "Vencimiento" | i18n %]</th>
-  </tr>
-[% FOREACH prestamo IN PRESTAMOS %]
-  <tr class="tope" bordercolor="#f2f2f2">
-	<td class="impar">
-
-        [% PERL %]
-                print C4::AR::Filtros::link_to( text =>     "[% prestamo.nivel3.nivel1.getTitulo%]",
-                                                url=>"[% url_prefix %]/opac-detail.pl", 
-                                                params => [ "id1=[% prestamo.nivel3.nivel1.getId1 %]", ],
-                                            ) ;
+                  <td align=center>
+                  [% IF prestamo.sePuedeRenovar %]
+		    [% PERL %]
+				print C4::AR::Filtros::to_Icon(     text    => "[% 'Renovar' | i18n %]",
+								    boton   => "icon_renovar",                                                            
+								    onClick => "renovar('[% prestamo.getId_prestamo %]');",
+								    title   => "[% 'Renovar' | i18n %]",
+								    alternClass => "botonCentradoTabla"
+					) ;
+		    [% END %]
+                  [% END %]
+                  </td>
+            </tr>
         [% END %]
-        
-	</td>
-	<td class="impar">
-  	[% IF prestamo.nivel3.nivel1.getAutor %]
-		<!--<a href="[% url_prefix %]/opac-searchresults.pl?authorid=[% prestamo.nivel3.nivel1.getAutor %]" >
-		[% prestamo.nivel3.nivel1.cat_autor.getCompleto %]
-		</a>-->
-        [% PERL %]
-                print C4::AR::Filtros::link_to( text =>     "[% prestamo.nivel3.nivel1.cat_autor.getCompleto%]",
-                                                url=>"[% url_prefix %]/opac-searchresults.pl", 
-                                                params => [ "authorid=[% prestamo.nivel3.nivel1.getAutor %]", ],
-                                            ) ;
-        [% END %]
-  	[% ELSE %]
-		&nbsp;
- 	[% END %]
-	</td>
-	<td class="impar" align="center" >
-	[% IF prestamo.nivel3.getBarcode %] 
-		[% prestamo.nivel3.getBarcode %]
-	[% ELSE %]
-		- 
-	[% END %]
-	</td>
-	<td class="impar" align="center" >
-	[% IF prestamo.nivel3.getSignatura_topografica %]
-		[% prestamo.nivel3.getSignatura_topografica %] 
-	[% ELSE %]
-		-
-	[% END %]
-	</td>
-	<td align=center class="impar" align="center" >
-	[% IF prestamo.nivel3.nivel2.getEdicion %] [% prestamo.nivel3.nivel2.getEdicion %] [% ELSE %] - [% END %]
-<!--	[% IF rpublicationyear %]&nbsp;([% rpublicationyear %])[% END %]-->
-	[% IF prestamo.nivel3.nivel2.getVolumen %] t [% prestamo.nivel3.nivel2.getVolumen %] 
-		[% IF prestamo.nivel3.nivel2.getVolumenDesc %] ([% prestamo.nivel3.nivel2.getVolumenDesc %])  [% END %] 
-	[% END %]
-	</td>
-	<td class="impar" align="center" >
-	[% IF prestamo.getFecha_prestamo %] 
-		[% prestamo.getFecha_prestamo_formateada %]
-	[% ELSE %]
-		- 
-	[% END %]
-	</td>
-	<td class="impar" align="center" >
-	[% IF prestamo.nivel3.getBarcode %]
-		<font color="[% IF prestamo.estaVencido %]red[% END %]">[% prestamo.getFecha_vencimiento_formateada %]</font>
-		[% IF CirculationEnabled %]
-       			[% IF prestamo.sePuedeRenovar %]
-                            [% PERL %]
-                                print C4::AR::Filtros::to_Icon(   text    => "[% 'Renovar' | i18n %]",
-                                                                    boton   => "icon_renovar",
-                                                                    width   => "100",
-                                                                    onClick => "renovar([% prestamo.getId_prestamo %]);",
-                                                                    title   => "[% 'Renovar' | i18n %]",
-                                                                    alternClass => "botonCentradoTabla"
-                                                            );
-                            [% END %]
-			    [% END %]
-		[% END %]
-	[% ELSE %]
-		- 
-	[% END %]
-	</td>
-  </tr>
-[% END %]
-</table>
-<br>
+
+    </table>
+
 [% ELSE %]
-	<p>[% "No tiene ejemplares prestados" | i18n %]</p>
+    <h1> [% 'Ud. no tiene pr&eacute;stamos vigentes.' | i18n %] </h1>
+
 [% END %]
-
-
-</td>
-  </tr>
-</table>
 
 
 
