--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
@@ -83,7 +83,7 @@ $(document).ready( function() {
 
 <div id="datos_del_leader" style="display: none;">
 <fieldset>
-    <legend class="titulo_legend">[% "Datos del LEADER" | i18n %]</legend>
+    <legend class="titulo_legend">[% "Datos de la cabecera" | i18n %]</legend>
     <ul style="clear:both">        
         <li class="sub_item" >
             <label for="id_nivel_bibliografico">
