fixes en texto, en creacion catalogo

--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/estructuraCatalo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/estructuraCatalo.tmpl
@@ -540,7 +540,7 @@ function updateModificarEstructuraCatalogacion(responseText){
     print C4::AR::Filtros::ayuda_marc() ;
 [% END %]
 
-<div class="titulos" >Estructura de Catalogaci&oacute;n</div>
+<div class="titulos" >Configuraci&oacute;n del formulario de carga</div>
 
 
 <fieldset>
