#2907 fixed, y varios de CSS

--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleUsuario.tmpl
@@ -180,7 +180,7 @@
                         [% IF nroSocioLoggeado != nro_socio %]
                             <li>
                             [% PERL %]
-                                                print C4::AR::Filtros::to_Button(   text    => "[% 'Reset Password' | i18n %]",
+                                                print C4::AR::Filtros::to_Button(   text    => "[% 'Reestablecer contrase&ntilde;a' | i18n %]",
                                                                                     boton   => "boton_buscar",
                                                                                     onClick => "resetPassword();",
                                                         ) ;
