visualizacion main intra

--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
@@ -4740,7 +4740,7 @@ font-size:10pt;
     margin-left:0;
 }*/
 
-.tb a {
+/*.tb a {
     height: 20px;
 }
 
@@ -4753,7 +4753,7 @@ a {
     overflow: visible;
     padding: 0;
     text-decoration: none;
-}
+}*/
 
 
 .charleft{
