--- a/intranet/htdocs/intranet-tmpl/main.tmpl
+++ b/intranet/htdocs/intranet-tmpl/main.tmpl
@@ -15,11 +15,16 @@
 		    //callBackFunction: updateAutocompleteBarcodes
 		});
 
-
+        
         $('.fancy_link').fancybox({
         });
 
         mostrarNovedades();
+
+        $("#button_twitter").hover(twitter_hover, twitter_normal);
+ 
+        $("#button_twitter").click(twitter_click);
+        
       });
   
 
@@ -41,6 +46,18 @@
                               $('#state').css('display','none');     
                         }
         });
+    }
+
+    function twitter_hover(){
+        $("#button_twitter").attr("src","[% temas %]/[% tema %]/imagenes/botones/button_twitter_hover.png");
+    }
+  
+    function twitter_normal(){
+        $("#button_twitter").attr("src","[% temas %]/[% tema %]/imagenes/botones/button_twitter_normal.png");
+    }
+
+    function twitter_click(){
+        $("#button_twitter").attr("src","[% temas %]/[% tema %]/imagenes/botones/button_twitter_click.png");
     }
 
 </script>
@@ -137,16 +154,11 @@
 
 [% IF twitter_enabled %]
 
-<a class="fancy_link" href="[% url_prefix %]/admin/publicar_twitter.pl?token=[% token %]">
-                               Publicar en Twitter
-
+<a class="fancy_link" href="[% url_prefix %]/admin/publicar_twitter.pl?token=[% token %]" > 
+  <img id="button_twitter" src="[% temas %]/[% tema %]/imagenes/botones/button_twitter_normal.png" alt="Twitter"/>
 </a>
 
-<span id="tweet-button" class="tb-container">
-<span class="tb">
-    <a id="btn" tabindex="1" href="https://twitter.com/share?original_referer=http%3A%2F%2Fmultiamerican.scpr.org%2F2011%2F04%2Fthe-cultural-mashup-dictionary-twittear-and-feisbuk%2F&source=tweetbutton&text=Via%20%40Multi_American%3A%20The%20cultural%20mashup%20dictionary%3A%20Twittear%20and%20Feisbuk%20%7C&url=http%3A%2F%2Fmultiamerican.scpr.org%2F2011%2F04%2Fthe-cultural-mashup-dictionary-twittear-and-feisbuk%2F" aria-describedby="btn-desc">
-</span>
-</span>
+
 [% END %]
   
 [% INCLUDE 'intranet-bottom.inc' %]
